# nao-robo-leader

./: .gitattributes  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/lib/pkgconfig/: nao-robo-leader.pc  nao_roboleader.pc
devel/share/nao-robo-leader/cmake/: nao-robo-leaderConfig.cmake
devel/share/nao_roboleader/cmake/: nao_roboleaderConfig.cmake
src/nao_gui/: CMakeLists.txt  NaoMainWindow.ui  package.xml
src/nao_gui/include/: NaoMainWindow.h
src/nao_gui/resources/: NaoMainWindow.ui
src/nao_gui/src/: NaoMainWindow.cpp  main.cpp  main.cpp~
src/nao_robo_leader/: CMakeLists.txt~  package.xml  package.xml~
src/nao_robo_leader/src/: nao_talk.cpp~  nao_talk.hpp~  nao_teleop_key.cpp  nao_teleop_key.cpp~
src/nao_roboleader/: CMakeLists.txt  package.xml
src/nao_utils/: CMakeLists.txt  package.xml
src/nao_utils/include/: nao_talk.h
src/nao_utils/src/: nao_events_publisher.cpp  nao_events_response.cpp  nao_speech_response.cpp  nao_talk.cpp
